creusot/tests/should_fail/opaque_unproveable.mlcfg

module OpaqueUnproveable_X_Opaque_Stub
  predicate opaque [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ())
end
module OpaqueUnproveable_X_Opaque_Interface
  predicate opaque [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ())
  val opaque [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ()) : bool
    ensures { result = opaque _1 }
    
end
module OpaqueUnproveable_X_Opaque
  predicate opaque [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ()) =
    [#"../opaque_unproveable.rs" 10 8 10 12] true
  val opaque [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ()) : bool
    ensures { result = opaque _1 }
    
end
module OpaqueUnproveable_Test_Interface
  val test [#"../opaque_unproveable.rs" 14 0 14 13] (_1 : ()) : ()
end
module OpaqueUnproveable_Test
  clone OpaqueUnproveable_X_Opaque_Interface as Opaque0
  let rec cfg test [#"../opaque_unproveable.rs" 14 0 14 13] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : ()) : ()
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  {
    goto BB0
  }
  BB0 {
    assert { [@expl:assertion] [#"../opaque_unproveable.rs" 16 18 16 29] Opaque0.opaque () };
    [#"../opaque_unproveable.rs" 14 14 17 1] _0 <- ([#"../opaque_unproveable.rs" 14 14 17 1] ());
    return _0
  }
  
end
